adding remark for empty string

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
              <input id="lunch-menu" type="text" ng-model="foodList"
              placeholder="list comma separated dishes you usually have for lunch"
              class="form-control">
+             <label for="lunch-menu">Remark: Empty item, i.e., , , is not considered as an item.</label>
          </div>
          <div class="form-group">
              <button class="btn btn-default" ng-click="checkFoodAmount();">Check If Too Much</button>
